[package]
name = "whatsmyip"
version = "0.1.0"
authors = ["Terry Chia <terrycwk1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.3"
tokio = { version = "1.13.1", features = ["full"] }
clap = "2.33.1"
